@@ -5,6 +5,7 @@ cm4all-beng-proxy (0.3.1) unstable; urgency=low
   * http-client: don't read body after invoke_response()
   * fork: retry splice() after EAGAIN
   * fork: don't close input when splice() fails
+  * cgi: abort the response handler when the stdin stream fails
 
  --
 
